# review-fabric

./: .gitignore  CONTRIBUTING.md  README.md  REVIEW_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
examples/: light-model.review-fabric.json
openspec/: config.yaml
openspec/changes/complete-live-provider-review-execution/: design.md  proposal.md  tasks.md
openspec/changes/complete-live-provider-review-execution/specs/bounded-review-conversation/: spec.md
openspec/changes/establish-review-protocol/: design.md  proposal.md  tasks.md
scripts/: live_smoke.py
src/review_fabric/: __init__.py  cli.py  configuration.py  credentials.py  errors.py  orchestration.py  redaction.py  serialization.py
src/review_fabric/domain/: __init__.py  adjudication.py  findings.py  models.py  normalization.py  policy.py
src/review_fabric/evidence/: __init__.py  artifacts.py  commands.py  git.py  github.py
src/review_fabric/reviewers/: __init__.py  base.py  crewai.py  providers.py
tests/: test_cli.py  test_cli_lifecycle.py  test_configuration.py  test_configuration_loader.py  test_conversation.py  test_credentials.py  test_e2e_fixtures.py  test_errors.py  test_live_providers.py  test_orchestration.py  test_providers.py  test_redaction.py  test_serialization.py
tests/artifacts/: test_store.py
tests/domain/: test_adjudication.py  test_findings.py  test_normalization.py  test_policy.py  test_review_package.py
tests/evidence/: test_commands.py  test_git.py  test_github.py
tests/fixtures/: live-smoke-config.json
(+8 files in other folders)
