[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-fabric"
version = "0.1.0"
description = "Evidence-driven multi-agent code-review orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "keyring>=25.7.0",
  "pydantic>=2.10,<3",
]

[project.scripts]
review-fabric = "review_fabric.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["src/review_fabric"]
